Fixed plenty of irritating UI bugs:
- large navbar
- strange 'x' button on UserNavBubble overlay
- cut off scrollbar
- wild behaviour of root components

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -57,13 +57,13 @@ $spacer: 2rem;
 
 @include media-breakpoint-up(sm) {
   html {
-    font-size: 0.8rem;
+    font-size: 1.0rem;
   }
 }
 
 @include media-breakpoint-up(md) {
   html {
-    font-size: 0.9rem;
+    font-size: 1rem;
   }
 }
 
